# -RUST--backend-electro

./: Cargo.toml
migrations/2022-11-05-124523_create_users/: up.sql
migrations/2022-11-05-124741_create_activity_tracker/: up.sql
migrations/2022-11-05-124812_create_org_projecs/: up.sql
migrations/2022-11-05-125039_alter_org_projects/: up.sql
migrations/2022-11-05-125304_alter_activity_tracker/: up.sql
migrations/2022-11-05-125435_add_activity_tracker_createdat/: up.sql
migrations/2022-11-05-131910_alter_org_projects/: up.sql
migrations/2022-11-05-133236_add_default_json_org_projects/: up.sql
migrations/2022-11-05-141925_auto_generate_uuid/: up.sql
migrations/2022-11-05-142212_auto_generate_uuid_recreate/: up.sql
migrations/2022-11-05-142532_auto_create_default_json/: up.sql
migrations/2022-11-05-154846_alter_org_projects/: up.sql
migrations/2022-11-06-061728_alter_org_projects/: up.sql
src/: custom_types.rs  main.rs  remanents.rs  schema.rs
src/helpers/: mod.rs  module1.rs  structs.rs
src/models/: creation.rs  mod.rs  read.rs
src/services/: module_1.rs
src/user_management/: get.rs  mod.rs  post.rs  structs.rs
