[package]
name = "BACKEND-electrocaed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
dotenv = "0.15.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
actix-multipart = "0.4.0"
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2","chrono"] }
uuid = { version = "0.8.2", features = ["v4"] }
argon2 = "0.4.1"
chrono = "0.4.22"
rand = "0.8.5"
jsonwebtoken = "8.1.1"
actix-cors = "0.6.3"
futures-util = "0.3.25"
mime = "0.3.16"
